get comments api implemented
