# routes/postRoutes.js
@@ -1,6 +1,6 @@
 const express =require("express");
 const verifyToken = require("../middleware/verifyToken");
-const { createPost, getAllPosts, addComment } = require("../controllers/blogController");
+const { createPost, getAllPosts, addComment, getComments } = require("../controllers/blogController");
 
 const postRoute=express.Router();
 
@@ -8,7 +8,7 @@ const postRoute=express.Router();
 postRoute.post("/createPost",verifyToken,createPost);
 postRoute.get("/getAllPosts",verifyToken,getAllPosts);
 postRoute.post("/addComment",verifyToken,addComment)
-postRoute.delete("/deletePost/:id",verifyToken)
+postRoute.get("/getComments/:id",verifyToken,getComments)
 
 
 module.exports=postRoute;
